2.2 Final from 13th July. 2012

Changelog:

ADDED:
- Frontend: Actionicons within the detailpage to edit and delete a content

FIXED:
- Fix slow page loading index page problem in file "cms/admin/index.php"
(http://community.impresscms.org/modules/newbb/viewtopic.php?viewmode=flat&type=&topic_id=5218&forum=9)

DELETE:
- Links from the Frontend to the Modul Administration



2.1 Final from 29th Mar. 2012

Changelog:

CHANGED:
- Style from button deleted, otherwise you can get a issue with your theme

FIXED:
- Error in the module administration fixed



2.0 Final from 19th Mar. 2012

Changelog:

ADDED:
- Function for SEO-URL added (backend, front end and global search)
- Link to the comments from the module (module ACP)
- A note within the manual (How can I add PHP scripts)

DELETE:
- Regular date from the templates deleted
	(You can add if you like - see manual)



1.0 Final from 16th Feb. 2012

Changelog:

- Is more than one comment available, the login and register info will be display on bottom too
- Comment anker for request URL added
- Image resize for archived contents solved
- Module help integrated
- Problem with the theme changer fixed
- Function "read more" is visible only, if extended text available
- Resize function in the archived content fixed
- the breadcrumb link to the archive works now 
- Comment function for archived contents added
- Breadcrumb fixed
- Link to the content within the archived Page fixed
- Table overview for archived Page fixed
- Added counter as column within the table overview
- German translation added
- Comment bubbles are visible only, if comment function on
- Comment template modified. If the visitor a guest, the can find a link for login or register to post a comment.
- Link to the module blocks added
- New list block added
- New ticker block added
- New slider block added
- Imagesize for single page fixed
- Some options from the module preferences are disabled by default
- .::Module Admin page::. link on top also available 