@@ -1,0 +1,43 @@
+<?php
+/**
+ * English language constants used in admin section of the module
+ *
+ * @copyright	Copyright Madfish (Simon Wilkinson) 2012
+ * @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+ * @since		1.0
+ * @author		Madfish (Simon Wilkinson) <simon@isengard.biz>
+ * @package		cms
+ * @version		$sato-san$
+*/
+
+defined("ICMS_ROOT_PATH") or die("ICMS root path not defined");
+
+// Requirements
+define("_AM_CMS_REQUIREMENTS", "Contents Requirements");
+define("_AM_CMS_REQUIREMENTS_INFO", "We've reviewed your system, unfortunately it doesn't meet all the requirements needed for Contens to function. Below are the requirements needed.");
+define("_AM_CMS_REQUIREMENTS_ICMS_BUILD", "Contents requires at least ImpressCMS 1.3.");
+define("_AM_CMS_REQUIREMENTS_SUPPORT", "Should you have any question or concerns, please visit our forums at <a href='http://community.impresscms.org'>http://community.impresscms.org</a>.");
+
+// Start
+define("_AM_CMS_CMS", "CMS");
+define("_AM_CMS_CMS_DSC", "All contents in the module");
+define("_AM_CMS_START_CREATE", "Add a content");
+define("_AM_CMS_START", "Content");
+define("_AM_CMS_START_CREATE_INFO", "Fill-out the following form to create a new content.");
+define("_AM_CMS_START_EDIT", "Edit this content");
+define("_AM_CMS_START_EDIT_INFO", "Fill-out the following form in order to edit this content.");
+define("_AM_CMS_START_MODIFIED", "The content was successfully modified.");
+define("_AM_CMS_START_CREATED", "The content has been successfully created.");
+define("_AM_CMS_START_VIEW", "Content info");
+define("_AM_CMS_START_VIEW_DSC", "Here is the info about this content.");
+define("_AM_CMS_START_WEIGHTS_UPDATED", "Content weights updated");
+define("_AM_CMS_START_ONLINE", "Online");
+define("_AM_CMS_START_OFFLINE", "Offline");
+define("_AM_CMS_START_VISIBLE", "Content switched online");
+define("_AM_CMS_START_INVISIBLE", "Content switched offline");
+define("_AM_CMS_START_ARCHIVIERT", "Content marked as archived");
+define("_AM_CMS_START_ACTIVE", "Content marked active");
+define("_AM_CMS_START_YES", "Yes");
+define("_AM_CMS_START_NO", "No");
+define("_AM_CMS_START_ALL_CMS", "-- All Tags --");
+define("_AM_CMS_START_FILTER_BY_TAG", "Filter by tag");
