@@ -1,0 +1,50 @@
+<?php
+/**
+ * English language constants used in blocks of the module
+ *
+ * @copyright	Copyright Madfish (Simon Wilkinson) 2012
+ * @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+ * @since		1.0
+ * @author		Madfish (Simon Wilkinson) <simon@isengard.biz>
+ * @package		cms
+ * @version		$sato-san$
+*/
+
+defined("ICMS_ROOT_PATH") or die("ICMS root path not defined");
+
+define("_MB_CMS_RANDOM_ALL", "All tags");
+define("_MB_CMS_RANDOM_TAG", "Sort contents by tag");
+define("_MB_CMS_RANDOM_LIMIT", "Number of contents to show in block");
+define("_MB_CMS_RANDOM_OR_FIXED", "Randomise? (Do not cache the block!)");
+define("_MB_CMS_LOGOS_OR_LIST", "Show a summaries? (Otherwise will show compact list).");
+define("_MB_CMS_RANDOM_YES", "Yes");
+define("_MB_CMS_RANDOM_NO", "No");
+
+define("_MB_CMS_LIST_ALL", "All tags");
+define("_MB_CMS_LIST_TAG", "Sort contents by tag");
+define("_MB_CMS_LIST_LIMIT", "Number of contents to show in block");
+define("_MB_CMS_LIST_OR_FIXED", "Randomise? (Do not cache the block!)");
+define("_MB_CMS_LIST_LOGOS_OR_LIST", "Show a summaries? (default: No)");
+define("_MB_CMS_LIST_YES", "Yes");
+define("_MB_CMS_LIST_NO", "No");
+
+define("_MB_CMS_SLIDER_ALL", "All tags");
+define("_MB_CMS_SLIDER_TAG", "Sort contents by tag (default: All tags)");
+define("_MB_CMS_SLIDER_LIMIT", "Number of contents (default: 3)");
+define("_MB_CMS_SLIDER_OR_FIXED", "Randomise? (default: No)");
+define("_MB_CMS_SLIDER_LOGOS_OR_LIST", "Show a summaries? (default: Yes)");
+define("_MB_CMS_SLIDER_YES", "Yes");
+define("_MB_CMS_SLIDER_NO", "No");
+define("_MB_CMS_SLIDER_WARNING1", "WARNING:");
+define("_MB_CMS_SLIDER_WARNING2", "Don't change the values. -- This block needs 560px for the width. -- Please be carefull with this block. You can get a JavaScript Crash.");
+
+define("_MB_CMS_TICKER_LATESTNEWS", "Latest News");
+define("_MB_CMS_TICKER_ALL", "All tags");
+define("_MB_CMS_TICKER_TAG", "Sort contents by tag (default: All tags)");
+define("_MB_CMS_TICKER_LIMIT", "Number of contents (default: 5)");
+define("_MB_CMS_TICKER_OR_FIXED", "Randomise? (default: No)");
+define("_MB_CMS_TICKER_LOGOS_OR_LIST", "Show a summaries? (default: No)");
+define("_MB_CMS_TICKER_YES", "Yes");
+define("_MB_CMS_TICKER_NO", "No");
+define("_MB_CMS_TICKER_WARNING1", "WARNING:");
+define("_MB_CMS_TICKER_WARNING2", "Don't change the values. -- This block needs 570px for the width. -- Please be carefull with this block. You can get a JavaScript Crash.");
