@@ -1,0 +1,74 @@
+<?php
+/**
+ * English language constants commonly used in the module
+ *
+ * @copyright	Copyright Madfish (Simon Wilkinson) 2012
+ * @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+ * @since		1.0
+ * @author		Madfish (Simon Wilkinson) <simon@isengard.biz>
+ * @package		cms
+ * @version		$sato-san$
+*/
+
+defined("ICMS_ROOT_PATH") or die("ICMS root path not defined");
+
+// Module name for user side
+define("_CO_CMS_CMS", "CMS");
+
+// Start
+define("_CO_CMS_START_TITLE", "タイトル");
+define("_CO_CMS_START_TITLE_DSC", "The title name of your content.");
+define("_CO_CMS_START_LOGO", "コンテンツの画像？");
+define("_CO_CMS_START_LOGO_DSC", "Upload your image or a teaser photo. You can set the resize from the image in the module preferences.");
+define("_CO_CMS_START_WEBSITE", "ウェブサイト（コンテンツのURL）");
+define("_CO_CMS_START_WEBSITE_DSC", "IMPORTANT: Start with 'http://' - If the content has a dedicated website, enter the URL here. If not, leave it blank.");
+define("_CO_CMS_START_BEENDET", "アーカイブ");
+define("_CO_CMS_START_BEENDET_DSC", "Mark the content as archived. Contents are archived, ie. they will not be shown on the index page. However, they are available from a submenu item.");
+define("_CO_CMS_START_TAG", "Tag");
+define("_CO_CMS_START_TAG_DSC", "You may assign tags to the content if you wish. After them you can find a filter in the front end.");
+define("_CO_CMS_START_DESCRIPTION", "ティーザーコンテンツ");
+define("_CO_CMS_START_DESCRIPTION_DSC", "A summary description of your content. This will be displayed on the index page only.");
+define("_CO_CMS_START_EXTENDED_TEXT", "拡張コンテンツ");
+define("_CO_CMS_START_EXTENDED_TEXT_DSC", "The full description of your content (optional). This will be displayed when the full details of the content are viewed. If you leave this blank, the summary description will be displayed instead.");
+define("_CO_CMS_START_HISTORY", "私の歴史");
+define("_CO_CMS_START_HISTORY_DSC", "Write your History or a new draft here. This content is not visible within the front end.");
+define("_CO_CMS_START_CREATOR", "提出者");
+define("_CO_CMS_START_CREATOR_DSC", "The person who submitted this content.");
+define("_CO_CMS_START_DATE", "開始日");
+define("_CO_CMS_START_DATE_DSC", "Inception date of the content.");
+define("_CO_CMS_START_LAST_UPDATE", "最終更新日");
+define("_CO_CMS_START_LAST_UPDATE_DSC", "When a content is updated, an optional 'updated' notice can be displayed for a configurable period of time (see module preferences).");
+define("_CO_CMS_START_WEIGHT", "重さ");
+define("_CO_CMS_START_WEIGHT_DSC", "Controls the sorting order. Lower weights are listed first.");
+define("_CO_CMS_START_ONLINE_STATUS", "オンライン");
+define("_CO_CMS_START_ONLINE_STATUS_DSC", "Set this content online (yes) or offline (no). Offline contents are not accessible from the user side.");
+define("_CO_CMS_START_UPDATED", "更新");
+define("_CO_CMS_START_VIEWS", "views");
+define("_CO_CMS_START_TAGS", "Tags:");
+define("_CO_CMS_ARCHIVED_NO", "Not archived right now");
+define("_CO_CMS_ARCHIVED_YES", "Content is archived");
+define("_CO_CMS_START_ONLINE", "Online, click to switch Offline");
+define("_CO_CMS_START_OFFLINE", "Offline, click to switch Online");
+define("_CO_CMS_READ_MORE", "詳細はこちら");
+define("_CO_CMS_START_VIEW", "Preview within the module administration");
+define("_CO_CMS_PREVIEW", "Show the content in the front end");
+
+define("_CO_CMS_COMMENTS_INFO", "%d");
+define("_CO_CMS_COMMENTS_TITLE", "Comment on");
+define("_CO_CMS_NO_COMMENT", "0");
+
+
+define("_CO_CMS_GUEST_LOGIN", "Login");
+define("_CO_CMS_OR", "or");
+define("_CO_CMS_GUEST_REGISTER", "register");
+define("_CO_CMS_TO_POST_COMMENTS", "to post comments");
+// Tag select box
+define("_CO_CMS_START_ALL_TAGS", "-- Tag filter --");
+
+// Page titles
+define("_CO_CMS_BEENDET_CMS", "Archived contents");
+define("_CO_CMS_ACTIVE_CMS", "CMS");
+
+// Tag title
+define("_CO_CMS_TAGS_ALL_CONTENTS_ON", "All contents in");
+define("_CO_CMS_TAGS_ALL_SHOW", "see");
