@@ -1,0 +1,15 @@
+<?php
+/**
+ * English language constants used in the user side of the module
+ *
+ * @copyright	Copyright Madfish (Simon Wilkinson) 2012
+ * @license		http://www.gnu.org/licenses/old-licenses/gpl-2.0.html GNU General Public License (GPL)
+ * @since		1.0
+ * @author		Madfish (Simon Wilkinson) <simon@isengard.biz>
+ * @package		cms
+ * @version		$sato-san$
+*/
+
+defined("ICMS_ROOT_PATH") or die("ICMS root path not defined");
+define("_MD_CMS_ADMIN_PAGE", ". : : Module admin page : : .");
+define("_MD_CMS_ALL_CMS", "All content");
